--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "type": "git",
         "url": "https://github.com/PedroPi127/n8n-nodes-poli.git"
     },
-    "main": "index.js",
     "scripts": {
         "build": "tsc",
         "dev": "tsc --watch",
@@ -28,23 +27,14 @@
     ],
     "n8n": {
         "n8nNodesApiVersion": 1,
-        "credentials": [
-            "dist/credentials/PoliApi.credentials.js"
-        ],
         "nodes": [
             "dist/nodes/Poli/Poli.node.js"
         ]
     },
     "devDependencies": {
-        "@types/express": "^4.17.6",
-        "@types/request-promise-native": "~1.0.15",
-        "@typescript-eslint/parser": "~5.45",
-        "eslint-plugin-n8n-nodes-base": "^1.11.0",
-        "gulp": "^4.0.2",
-        "n8n": "^1.100.1",
-        "n8n-core": "^1.0.0",
-        "n8n-workflow": "^1.0.0",
-        "prettier": "^2.7.1",
-        "typescript": "~4.8.4"
+        "typescript": "5.4"
+    },
+    "peerDependencies": {
+        "n8n-workflow": "^1.0.0"
     }
 }
