--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,29 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "outDir": "dist",
-    "rootDir": ".",
     "strict": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "target": "es2019",
+    "outDir": "./dist",
+    "rootDir": ".",
+    "types": [
+      "node"
+    ],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    "resolveJsonModule": true,
+    "removeComments": true,
+    "sourceMap": true,
+    "declaration": true
   },
   "include": [
-    "nodes/**/*.ts",
-    "credentials/**/*.ts"
+    "credentials/**/*",
+    "nodes/**/*",
+    "nodes/**/*.json"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules/**/*",
+    "dist/**/*"
   ]
 }
