--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "type": "git",
         "url": "https://github.com/PedroPi127/n8n-nodes-poli.git"
     },
-    "main": "index.js",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsc && gulp build:icons",
         "dev": "tsc --watch",
@@ -32,19 +33,24 @@
             "dist/credentials/PoliApi.credentials.js"
         ],
         "nodes": [
-            "dist/nodes/Poli/index.js"
+            "dist/nodes/Poli/Poli.node.js",
+            "dist/nodes/Poli/PoliTrigger.node.js"
         ]
     },
+    "dependencies": {
+        "n8n-core": "^0.125.0",
+        "n8n-workflow": "^0.107.0"
+    },
     "devDependencies": {
-        "@types/express": "^4.17.6",
-        "@types/request-promise-native": "~1.0.15",
-        "@typescript-eslint/parser": "~5.45",
-        "eslint-plugin-n8n-nodes-base": "^1.11.0",
+        "@types/node": "^16.11.7",
+        "@typescript-eslint/eslint-plugin": "^5.29.0",
+        "@typescript-eslint/parser": "^5.29.0",
+        "eslint": "^8.17.0",
+        "eslint-plugin-n8n-nodes-base": "^1.0.0",
         "gulp": "^4.0.2",
         "gulp-copy": "^5.0.0",
-        "n8n-core": "~1.0.0",
-        "n8n-workflow": "~1.0.0",
-        "prettier": "^2.7.1",
-        "typescript": "~4.8.4"
+        "n8n-node-dev": "^0.107.0",
+        "prettier": "^2.6.2",
+        "typescript": "~4.7.4"
     }
 }
