Deletei o Poli.node.ts e quebrei em varias partes

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         ],
         "nodes": [
             "dist/nodes/Poli/Poli.node.js",
-            "dist/nodes/Poli/PoliTrigger.node.js"
+            "dist/nodes/Poli/PoliTrigger.node.js",
+            "dist/nodes/Poli/SendTemplateByContactId.node.js"
         ]
     },
     "dependencies": {
