--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "n8n-nodes-poli",
     "version": "0.1.0",
     "description": "Nó para interagir com a API da Poli",
+    "displayName": "Poli",
     "keywords": [
         "n8n-community-node-package"
     ],
@@ -33,21 +34,8 @@
             "dist/credentials/PoliApi.credentials.js"
         ],
         "nodes": [
-            "dist/nodes/Poli/PoliTrigger.node.js",
-            "dist/nodes/Poli/AddTagToContact.node.js",
-            "dist/nodes/Poli/CreateApp.node.js",
-            "dist/nodes/Poli/CreateTag.node.js",
-            "dist/nodes/Poli/CreateWebhook.node.js",
-            "dist/nodes/Poli/ForwardContact.node.js",
-            "dist/nodes/Poli/ListApps.node.js",
-            "dist/nodes/Poli/ListChannels.node.js",
-            "dist/nodes/Poli/ListContacts.node.js",
-            "dist/nodes/Poli/ListTags.node.js",
-            "dist/nodes/Poli/ListTemplates.node.js",
-            "dist/nodes/Poli/ListWebhooks.node.js",
-            "dist/nodes/Poli/SendMessageByContactId.node.js",
-            "dist/nodes/Poli/SendMessageByPhoneNumber.node.js",
-            "dist/nodes/Poli/SendTemplateByContactId.node.js"
+            "dist/nodes/Poli/Poli.node.js",
+            "dist/nodes/Poli/PoliTrigger.node.js"
         ]
     },
     "dependencies": {
