--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         ],
         "nodes": [
             "dist/nodes/Poli/Poli.node.js",
-            "dist/nodes/Poli/PoliTrigger.node.js"
+            "dist/nodes/Poli/PoliTrigger.node.js",
+            "dist/nodes/Poli/ForwardContact.node.js"
         ]
     },
     "dependencies": {
