--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
  "description": "Nó para interagir com a API da Poli",
  "displayName": "Poli",
  "keywords": [
-  "n8n-community-node-package"
- ],
+  "n8n-community-node-package",
+  "whatsapp",
+  "crm",
+  "poli",
+  "marketing",
+  "automations"
+],
  "license": "MIT",
  "homepage": "https://github.com/poli-digital/n8n-nodes-poli.git",
  "author": {
-  "name": "PedroPi127"
+  "name": "PedroPoli127"
  },
  "repository": {
   "type": "git",
@@ -35,8 +40,7 @@
   ],
   "nodes": [
    "dist/nodes/Poli/Poli.node.js",
-   "dist/nodes/Poli/PoliTrigger.node.js",
-   "dist/nodes/Poli/ForwardContact.node.js"
+   "dist/nodes/Poli/PoliTrigger.node.js"
   ]
  },
  "devDependencies": {
