--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
  },
  "repository": {
   "type": "git",
-  "url": "https://github.com/poli-digital/n8n-nodes-poli.git"
+  "url": "git+https://github.com/poli-digital/n8n-nodes-poli.git"
  },
  "main": "dist/index.js",
  "types": "dist/index.d.ts",
