Foi adicionado o N8N_REINSTALL_MISSING_PACKAGES no env

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ N8N_ENDPOINT_WEBHOOK=webhook
 N8N_ENDPOINT_WEBHOOK_TEST=webhook-test
 N8N_HOST=0.0.0.0
 N8N_PORT=5678
+N8N_REINSTALL_MISSING_PACKAGES=true
